Corrected bugs -not opening bookmark window before opening any mapinfo window -on ff links not working in the mapinfo window -got rid of orange outline in chrome -got rid of "close" appearing when opening the legend window -got rid of blue border of images under ie -changed hiding elements from visibility:hidden to display:none not to take up space

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,3 +1,5 @@
+a img {border: none;} 
+
 
 #map, #container {
 	height: 700px;
